main page elements added

--- a/src/assets/styles/abstracts/_fonts.scss
+++ b/src/assets/styles/abstracts/_fonts.scss
@@ -1,17 +1,19 @@
-@font-face {
+/* @font-face {
     font-family: "Euclid Flex";
     font-style: normal;
     font-weight: 400;
-    src: local(""), url("/website/src/assets/fonts/EuclidFlex-Regular-WebTrial.woff") format("woff"); 
+    src: local("Euclid Flex"), url("../../../src/assets/fonts/EuclidFlex-Regular-WebTrial.woff") format("woff"); 
   }
+
 @font-face {
     font-family: "Euclid Flex";
     font-style: medium;
     font-weight: 500;
-    src: local(""), url("/website/src/assets/fonts/EuclidFlex-Medium-WebTrial.woff") format("woff"); 
+    src: local("Euclid Flex"), url("../../../src/assets/fonts/EuclidFlex-Regular-WebTrial.woff"
+) format("woff"); 
   }
 
 
-  $fontMain: "Euclid Flex";
+  $fontMain: "Euclid Flex"; */
 /* oswald-regular - latin */
 
