--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,4 +1,4 @@
-@use "../../assets/styles/main.scss";
+@import "../../assets/styles/main.scss";
 
 .HeaderMain {
   position: relative;
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
- 
 
   .LogoDis {
     width: 6rem;
@@ -17,18 +16,16 @@
 
   .Fog {
     position: absolute;
-    z-index: 0;
-    margin: 0 auto;
     left: 0;
-    top: -1rem;
-    border: 1px solid red;
-    z-index: 0;
+    top: 2.5rem;
+    width: 100%;
   }
 }
 
 @media (max-width: 350px) {
   .HeaderMain {
     padding: 1.75rem 1.75rem;
-    width: 100%;
   }
 }
+
+
