--- a/src/components/Slogans/index.scss
+++ b/src/components/Slogans/index.scss
@@ -21,8 +21,9 @@ section.LabirynthMain {
     div.Slogan {
       max-width: 17.5rem;
       height: 4.25rem;
-      background: white;
+      background: $white;
       margin: 0 auto;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
   }
 }
