--- a/src/assets/styles/abstracts/_fonts.scss
+++ b/src/assets/styles/abstracts/_fonts.scss
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
     font-family: "Euclid Flex";
     font-style: normal;
     font-weight: 400;
@@ -14,6 +14,6 @@
   }
 
 
-  $fontMain: "Euclid Flex"; */
-/* oswald-regular - latin */
+  $fontMain: "Euclid Flex";
+
 
