--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import "./reset";
-@import "./abstracts/_breakpoints";
-@import "./abstracts/_colors";
-@import "./abstracts/_fonts";
+@forward "./reset";
+@forward "./abstracts/variables.scss";
+
+
