--- a/src/components/Slogans/index.scss
+++ b/src/components/Slogans/index.scss
@@ -1,4 +1,4 @@
-@import "../../assets/styles/main.scss";
+@use "../../assets/styles/main.scss" as *;
 
 section.LabirynthMain {
   position: relative;
