tech section logic done

--- a/src/components/Hero/index.scss
+++ b/src/components/Hero/index.scss
@@ -1,15 +1,4 @@
-@use "../../assets/styles/main.scss" as *;
-
-
-@font-face {
-  font-family: "Actor";
-  font-style: normal;
-  font-weight: 400;
-  src: local("./actor-v10-latin/actor-v10-latin-regular.woff") url("./actor-v10-latin/actor-v10-latin-regular.woff"),
-    format("woff"); 
-} 
-
-
+@use "../../styles/main.scss" as var;
 
 .HeroText {
   width: 100%;
@@ -20,8 +9,9 @@
     margin: 0 auto 4rem auto;
     text-align: center;
     line-height: 4.25rem;
-    font-family: $fontMain;
     z-index: 1;
+    font-family: var.$main-font;
+    font-weight: 500;
   }
 }
 
