--- a/src/styles/abstracts/_fonts.scss
+++ b/src/styles/abstracts/_fonts.scss
@@ -1,10 +1,20 @@
+$font-path: "../../assets/fonts/";
+
 @font-face {
   font-family: "Euclid Flex";
   font-style: normal;
   font-weight: 400;
-  src: 
-    url("/Users/filipmaciejowski/Documents/Prosjekter/dis/website/src/assets/fonts/EuclidFlex-Regular-WebTrial.woff") format("woff");
+  src: url("#{$font-path}EuclidFlex-Regular-WebTrial.woff") format("woff");
 }
+@font-face {
+  font-family: "Euclid Flex";
+  font-style: medium;
+  font-weight: 500;
+  src: url("#{$font-path}EuclidFlex-Medium-WebTrial.woff") format("woff");
+}
+
+$main-font: "Euclid Flex";
+
 
 // @font-face {
 //   font-family: "Euclid Flex";
@@ -13,8 +23,6 @@
 //   src: local("../../fonts/EuclidFlex-Medium-WebTrial.woff"),
 //     url("../../fonts/EuclidFlex-Medium-WebTrial.woff") format("woff");
 // }
-
-$fontMain: "Euclid Flex";
 
 /* actor-regular - latin */
 /* @font-face {
