--- a/src/components/Header/HamburgerButton/index.scss
+++ b/src/components/Header/HamburgerButton/index.scss
@@ -1,4 +1,4 @@
-@use "../../../assets/styles/main.scss" as *;
+@use "../../../styles/main.scss" as var;
 
 .Menu {
   width: auto;
@@ -9,6 +9,6 @@
     display: block;
     width: 3rem;
     height: 0.25rem;
-    background-color: $black;
+    background-color: var.$black;
   }
 }
