--- a/src/components/Slogans/index.scss
+++ b/src/components/Slogans/index.scss
@@ -1,4 +1,4 @@
-@use "../../assets/styles/main.scss" as *;
+@use "../../styles/main.scss" as var;
 
 section.LabirynthMain {
   position: relative;
@@ -21,7 +21,7 @@ section.LabirynthMain {
     div.Slogan {
       max-width: 17.5rem;
       height: 4.25rem;
-      background: $white;
+      background: var.$white;
       margin: 0 auto;
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     }
