--- a/src/components/Tech/TechStack/index.scss
+++ b/src/components/Tech/TechStack/index.scss
@@ -1,7 +1,9 @@
-svg.Techblocks {
+@use "../../../styles/main.scss" as var;
+
+svg.TechBlocks__SVG {
   width: 100%;
-  height: 100vh;
-  border: 1px solid red;
+  height: auto;
+  padding: 0 var.$padding-main;
   path.Block:hover {
     fill: darken(#ababab, 15%);
     cursor: pointer;
@@ -10,4 +12,12 @@ svg.Techblocks {
 .Clicked {
   fill: #ffb68c;
   cursor: pointer;
+}
+p.TechName {
+  padding: 2rem 0 0 calc(#{var.$padding-main} + 2px);
+  font-size: 2.25rem;
+  font-weight: 500;
+  text-align: left;
+  font-family: var.$main-font;
+  text-decoration: underline solid var.$orange-light 3px;
 }
