--- a/src/components/Tech/index.scss
+++ b/src/components/Tech/index.scss
@@ -1,9 +1,17 @@
-section.Tech {
+@use "../../styles/main.scss" as var;
+
+.Tech {
   width: 100%;
   height: 100vh;
-  padding: 2rem;
   text-align: center;
-  h1.Tech__header{
-      margin-bottom: 4rem;
+  margin-bottom: 20rem;
+
+  h1.Tech__header {
+    margin: 4rem auto calc(4rem - 30px) auto;
+  }
+  &__description {
+    font-size: 1.25rem;
+    font-family: var.$main-font;
+    padding: 0 calc(#{var.$padding-main} + 2px);
   }
 }
