--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -1,7 +1,10 @@
+@use "./abstracts/variables.scss" as var;
+
 html {
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   scroll-behavior: smooth;
+  color: var.$black;
 }
 
 body {
